# TiktokBot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
bot/: __init__.py  actions.py  captcha_adapter.py  config.py  humanizer.py  logger.py  main.py  playwright_manager.py  session_manager.py
scripts/: run_example.py  runner.py
tests/: __init__.py  test_humanizer.py  test_session_manager.py
